<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_refine">

    <fragment
        android:id="@+id/navigation_refine"
        android:name="com.example.netclanclone.ui.refine.RefineFragment"
        android:label="@string/title_refine"
        tools:layout="@layout/fragment_refine" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.netclanclone.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_network"
        android:name="com.example.netclanclone.ui.Network.NetworkFragment"
        android:label="@string/title_network"
        tools:layout="@layout/fragment_network" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.netclanclone.ui.chat.chatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.netclanclone.ui.contacts.ContactsFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contacts" />
</navigation>